# lobby

./: .gitignore  README.md  gradle.properties  install-quest.bat  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/quest/lobby/: BootReceiver.java  FileLogger.java  KioskService.java  LobbyAdminReceiver.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: device_admin.xml
